--- a/03-LoopsConditionals.ipynb
+++ b/03-LoopsConditionals.ipynb
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1249,7 @@
     "for i in range(len(text)):\n",
     "    letter = text[i]\n",
     "    if letter == \".\" or letter == \",\":\n",
-    "        print(text[i-2:i]+text[i])"
+    "        print(text[i-2:i+1])"
    ]
   }
  ],
